--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #63B4D1;
+  background-color: #63B4D1 !important;
   text-align: center;
 }
 
@@ -29,6 +29,10 @@ a {
 }
 
 a:hover {
+  color: #3DA35D;
+}
+
+h1 > a {
   color: #3DA35D;
 }
 
@@ -96,7 +100,7 @@ a:hover {
   width: 400px;
   margin: 10px auto;
   padding: 5px;
-  background-color: #FFFAE3;
+  background-color: #FFFAE3 !important;
   border-radius: 15px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
 }
@@ -110,4 +114,28 @@ a:hover {
   display: inline-block;
   font-size: 40px;
   padding: 0 10px;
+  color: black;
+}
+
+.name-logo {
+  font-family: Fasthand;
+  font-size: 40px;
+}
+
+.navbar-lewagon {
+  justify-content: space-between;
+  background: #FFFAE3;
+}
+
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 40px;
+}
+
+.nav-linked {
+  color: #4C6085;
+  margin-right: 50px;
 }
