--- a/style.css
+++ b/style.css
@@ -49,12 +49,20 @@ p{
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none!important;
   color: white;
 }
 
 a:hover {
   color: #273247
+}
+
+button:active {
+  border: 0!important;
+}
+
+a:active {
+  border: 0!important;
 }
 
 
@@ -228,35 +236,29 @@ div > button {
   text-align: right;
 }
 
+
 .btn-projects {
-  display: inline-block;
-  outline: 0;
+  background-image: linear-gradient(to right, #41aa10 0%, #17cac7  51%, #4ccb11  100%);
+  margin: 10px;
+  padding: 10px 40px;
   text-align: center;
-  cursor: pointer;
-  padding: 15px 23px;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 7px #eee;
+  border-radius: 10px;
+  display: block;
+  text-decoration: none;
+  font-family: 'Overpass', sans-serif;
   border: 0;
-  color: #fff;
-  font-size: 17.5px;
-  background: #00d301;
-  background: -webkit-linear-gradient(-196deg,#00d301,#36c275 50%,#00a562);
-  background: -webkit-linear-gradient(164deg,#00d301,#36c275 50%,#00a562);
-  background: linear-gradient(286deg,#00d301,#36c275 50%,#00a562);
-  line-height: 30px;
-  font-weight: 800;
-  transition: background,color .1s ease-in-out;
-  border-radius: .7rem;
-  transition: ease 0.2s;
   font-size: 20px;
-  margin-top: 60px;
-  margin-bottom: 80px;
 }
 
 .btn-projects:hover {
-  font-size: 22px;
-  background: #029202;
-  background: -webkit-linear-gradient(-196deg,#00d301,#36c275 50%,#00a562);
-  background: -webkit-linear-gradient(164deg,#00d301,#36c275 50%,#00a562);
-  background: linear-gradient(286deg,#00d301,#36c275 50%,#00a562);
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none!important;
 }
 
 .navbar {
