--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@
 }
 
 .banner {
-  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
+  background-image: url(./images/actual.png);
+  background-size: cover;
+  background-position: center;
   height: 100vh;
 }
 
 .banner-title {
-  padding-top: 150px;
+  padding-left: 50px;
 }
 
 body {
@@ -191,7 +194,8 @@ img {
   margin-right: 10px;
   margin-left: 10px;
   color: rgb(205, 205, 205);
-  transition: ease .2s
+  transition: ease .2s;
+  padding-top: 50px;
 }
 
 .links i:hover {
@@ -247,7 +251,7 @@ div > button {
   background-size: 200% auto;
   color: white;
   box-shadow: 0 0 7px #eee;
-  border-radius: 10px;
+  border-radius: 70px;
   display: block;
   text-decoration: none;
   font-family: 'Overpass', sans-serif;
@@ -271,7 +275,7 @@ div > button {
   background-size: 200% auto;
   color: white;
   box-shadow: 0 0 7px #eee;
-  border-radius: 10px;
+  border-radius: 70px;
   display: block;
   text-decoration: none;
   font-family: 'Overpass', sans-serif;
@@ -296,7 +300,7 @@ div > button {
   background-size: 200% auto;
   color: white;
   box-shadow: 0 0 7px #eee;
-  border-radius: 10px;
+  border-radius: 70px;
   display: block;
   text-decoration: none;
   font-family: 'Overpass', sans-serif;
@@ -321,7 +325,7 @@ div > button {
   background-size: 200% auto;
   color: white;
   box-shadow: 0 0 7px #eee;
-  border-radius: 10px;
+  border-radius: 70px;
   display: block;
   text-decoration: none;
   font-family: 'Overpass', sans-serif;
