--- a/style.css
+++ b/style.css
@@ -1,128 +1,34 @@
-#profile-logo {
-  width: 200px;
-  height: 200px;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.35);
+body {
+  background-color: #1C1C1C!important;
+  font-family: 'Overpass', sans-serif!important;
+  color: white!important;
 }
 
-.img-circle {
-  border-radius: 50%;
-}
-
-.banner {
-  /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
-  background-image: url(./images/banner.jpg);
+#header {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 98%, rgb(54, 52, 52) 100%),
+            url(/images/3626052.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
-}
-
-.banner-title {
-  padding-left: 50px;
-}
-
-body {
-  background-color: white;
-  text-align: center;
-}
-
-h1, h2, p, a {
-  font-family: 'Overpass', sans-serif;
-  color: rgb(223, 223, 223);
 }
 
 h3 {
-  color: black;
-  font-size: 3.5rem!important;
-  font-family: 'Overpass', sans-serif;
+  font-size: 3rem!important;
+  font-family: 'Overpass', sans-serif!important;
 }
 
-h1 {
-  font-size: 6.5rem!important;
+.blur-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px; /* Adjust the height of the blur effect */
+  background: inherit;
+  filter: blur(10px);
 }
-
-h2 {
-  color: black!important;
-}
-
-p{
-  color: #666;
-  margin-bottom: 40px;
-  font-size: 1.35rem;
-}
-
-a {
-  text-decoration: none!important;
-  color: white;
-}
-
-a:hover {
-  color: #273247
-}
-
-button:active {
-  border: 0!important;
-}
-
-a:active {
-  border: 0!important;
-}
-
 
 .projects {
-  color: #4C6085!important;
-}
-
-.container {
-  margin-bottom: 0px;
-  transition: ease 0.2s;
-}
-
-.container-titles-projects  h1 {
-  margin-top: 100px;
-  text-align: center;
-  margin-bottom: 55px;
-}
-
-.container-titles-about {
-  margin-top: 75px;
-}
-
-.container:hover {
-
-}
-
-
-
-.about-card {
-  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-  border-radius: .5rem;
-  padding: 15px;
-  transition: ease 0.2s;
-}
-
-.about-card > h3 {
-  text-align: center;
-  margin-bottom: 25px;
-}
-
-.about-card:hover{
-  transform: translateY(-40px);
-  transform: translateX(-10px);
-  box-shadow: 10px 5px 5px white;
-}
-
-.btn-orange {
-  padding: 10px;
-  color: white;
-  background-color: #3DA35D;
-  border-radius: 10px;
-  margin-top: 100px;
-}
-
-.btn-orange:hover {
-  background-color: red;
-  color: white;
-  transition: 0.5s;
+  color: white!important;
 }
 
 .card {
@@ -150,8 +56,6 @@ a:active {
   font-size: 40px;
 }
 
-
-
 .nav-linked {
   color: #4C6085;
   margin-right: 50px;
@@ -167,7 +71,7 @@ a:active {
   display: flex;
   justify-content: space-between; /* This makes the space between the left and right parts */
   align-items: center;
-  background-color: rgb(4, 53, 65);
+  background-color: #1C1C1C;
   padding: 20px;
   position: fixed;
   top: 0;
@@ -198,7 +102,7 @@ a:active {
   letter-spacing: 1px;
   position: relative;
   padding: 12px 0;
-  text-transform: uppercase;
+  text-transform: capitalize;
   opacity: 0;
   transform: translateY(-30px);
   transition: transform 0.4s ease, opacity 0.4s ease, color 0.4s ease;
@@ -265,7 +169,27 @@ a:active {
   width: 100%;
 } */
 
-img {
+.header-text{
+  padding-top: 27%;
+  font-size: 30px!important;
+}
+
+.header-text p {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.header-text h1{
+  font-size: 60px!important;
+  color: white;
+  margin-top: 20px;
+}
+
+.header-text h1 span{
+  color: #5ae124;
+}
+
+.avatar {
   width: 200px;
   height: 180px;
   border-radius: .5rem;
@@ -286,18 +210,33 @@ img {
   color: white;
 }
 
+.skills-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 columns */
+  gap: 20px; /* Space between grid items */
+  justify-items: center; /* Center items horizontally */
+  align-items: center; /* Center items vertically */
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
 .skills i {
   font-size: 100px;
   margin-right: 10px;
   margin-left: 10px;
-  color: #666;
+  color: 		#5ae124;
   transition: ease .2s;
   margin-right: 15px;
 }
 
 .skills i:hover {
-  color: #5ae124;
+  color: white;
+  /* #5ae124 */
 }
 
 .btn-grad {
@@ -329,6 +268,7 @@ div > button {
 .btn-projects {
   background-image: linear-gradient(to right, #41aa10 0%, #17cac7  51%, #4ccb11  100%);
   margin: 10px;
+  text-decoration: none;
   padding: 10px 40px;
   text-align: center;
   text-transform: uppercase;
@@ -344,8 +284,35 @@ div > button {
   font-size: 20px;
 }
 
+.button {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button:hover {
+  background-color: #5ae124;
+  box-shadow: 0px 15px 20px rgba(42, 107, 81, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.button:active {
+  transform: translateY(-1px);
+}
+
 .btn-projects:hover {
-  background-position: right center; /* change the direction of the change here */
+  background-position: right center;
   color: #fff;
   text-decoration: none!important;
 }
@@ -429,17 +396,17 @@ div > button {
 
 .about-section {
   padding-top: 50px;
-  background-color: white;
+  background-color: 	#1C1C1C;
 }
 
 .project-section {
   padding-top: 100px;
-  background-color: white;
+  background-color: 	#1C1C1C;
 }
 
 .contact-section {
-  padding-top: 150px;
-  background-color: white;
+  padding-top: 100px;
+  background-color: 	#1C1C1C;
 }
 
 
@@ -465,12 +432,12 @@ div > button {
 .copyright > a {
   text-decoration: none!important;
   font-size: 13px;
-  color: #999999;
+  color: white;
   transition: ease .2s;
 }
 
 .copyright > a:hover {
-  color: #b5b5b5;
+  color: white;
 }
 
 .form-control:focus {
@@ -508,7 +475,7 @@ html {
   }
 
   .container {
-    padding: 20px;
+    padding: 10px 10%;
   }
 }
 
@@ -554,4 +521,87 @@ html {
   width: 100%;
   padding: 10px 0;
   text-align: center;
+}
+
+#portefolio {
+  padding: 5px 0;
+}
+
+.project-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
+  margin-top: 50px;
+  align-items: stretch;
+}
+
+.project{
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+
+}
+
+.project img{
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.project h3{
+    color: white;
+    font-weight: 500;
+    margin-bottom: 20px;
+    font-size: 1.2rem!important;
+    font-family: 'Overpass', sans-serif;
+}
+
+.project p{
+  color: white;
+  font-size: 1rem;
+}
+
+.layer {
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(0,0,0,0.6), #2dd254);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+}
+
+.layer a{
+  margin-top: 20px;
+  color: #2dd254;
+  font-size: 24px;
+  text-decoration: none;
+  line-height: 60px;
+  background: white;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex; /* Ensures flex behavior */
+  align-items: center; /* Centers vertically */
+  justify-content: center; /* Centers horizontally */
+  text-align: center!important;
+}
+
+.project:hover img{
+  transform: scale(1.1);
+}
+
+.project:hover .layer{
+  height: 100%;
 }
