--- a/style.css
+++ b/style.css
@@ -300,6 +300,23 @@ div > button {
   outline: none;
 }
 
+.button-send {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  display: block;
+}
+
 .button:hover {
   background-color: #5ae124;
   box-shadow: 0px 15px 20px rgba(42, 107, 81, 0.4);
