--- a/style.css
+++ b/style.css
@@ -13,6 +13,87 @@ body {
   background-position: center;
 }
 
+#about {
+  padding: 80px 0;
+  color: white;
+}
+
+.about-container{
+  margin-top: 175px;
+}
+
+.row{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.about-col-1{
+  flex-basis: 35%;
+}
+
+.about-col-1 img {
+  width: 100%;
+  border-radius: 15px;
+  height: 400px;
+  margin-bottom: 30px;
+}
+
+.about-col-2{
+  flex-basis: 60%!important;
+}
+
+.tab-titles{
+  display: flex;
+  margin: 20px 0 20px
+}
+
+.tab-links{
+  margin-right: 50px;
+  font-size: 25px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+
+.tab-links::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #5ae124;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.5s;
+}
+
+.tab-links.active-link::after {
+  width: 50%;
+}
+
+.tab-contents ul {
+  padding-left: 0!important;
+}
+
+.tab-contents ul li{
+  list-style: none;
+  margin: 10px 0;
+}
+
+.tab-contents ul li span{
+  color: #5ae124;
+  font-size: 14px;
+}
+
+.tab-contents{
+  display: none;
+
+}
+
+.tab-contents.active-tab{
+  display: block;
+}
+
 h3 {
   font-size: 3rem!important;
   font-family: 'Overpass', sans-serif!important;
