--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ div > button {
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
-  cursor: pointer;
+  cursor: pointer!important;
   outline: none;
 }
 
